style sheet updates

--- a/AlbumPages.html
+++ b/AlbumPages.html
@@ -2,6 +2,13 @@
 <html>
     <head>
         <title>Album Pages</title>
+		<style>
+		h3{color:blue;
+		}
+		</style>
+		<link href="albumStyles.css"
+		rel="stylesheet"
+		type="text/css"/>
         </head>
     <body>
 <p>
@@ -24,7 +31,7 @@
 </p>
 
 <table border="1" width="90%">
-    <caption>Tracks</caption>
+    <caption style="color:blue;">Tracks</caption>
     <tr bgcolor="gray">
         <th>Track #</th>
         <th>Track Title</th>
