updating to album pages 041819

--- a/AlbumPages.html
+++ b/AlbumPages.html
@@ -5,6 +5,7 @@
 		<style>
 		h3{color:blue;
 		}
+		
 		</style>
 		<link href="albumStyles.css"
 		rel="stylesheet"
@@ -12,15 +13,22 @@
         </head>
     <body>
 <p>
-<center><img src="http://www.popspotsnyc.com/pretzel_logic/Pretzel_logic.jpg" style="width:200px"/></center>        
-<center><h1>Pretzel Logic</h1></center>
+<center>
+<div style="background-image: url(http://www.popspotsnyc.com/pretzel_logic/Pretzel_logic.jpg); height: 600px; width: 600px">
+</center>
+</div>
+
+<!-- <center><img src="http://www.popspotsnyc.com/pretzel_logic/Pretzel_logic.jpg" width="200px"></center> -->
+<!-- <center><img src="http://www.popspotsnyc.com/pretzel_logic/Pretzel_logic.jpg" style="width:200px"/></center> -->
+</div>       
+<center><h1 style="font-family:Helvetica">Pretzel Logic</h1></center>
 <center><a href="https://www.steelydan.com/" target="_blank"><h2>Steely Dan</h2></a></center>
 <center><h4>February 20, 1974</h4></center>
 </p>
-        <hr/>
+<hr/>
 <p>
-<center><h3>Band Members and Producers</h3></center>
-<ul>
+<center><h3 style="font-family:Helvetica">Band Members and Producers</h3></center>
+<ul style="font-style:italic">
 <li>Walter Becker - Guitar, Bass, Background Vocals</li>
 <li>Donald Fagen - Keyboards, Saxophone, Lead Vocals</li>
 <li>Denny Dias - Guitar</li>
