--- a/AlbumPages.html
+++ b/AlbumPages.html
@@ -3,9 +3,24 @@
     <head>
         <title>Album Pages</title>
 		<style>
-		h3{color:blue;
+		h3{
+		color:blue;
 		}
-		
+		td{
+		font-style:italic;
+		text-align:center;
+		}
+		tbody, td {
+		background-color:lime;	
+		}
+		a {
+		text-decoration:none;
+		background-color:white;
+		}
+		a:hover {
+		text-decoration:underline;
+		background-color:lime;
+		}
 		</style>
 		<link href="albumStyles.css"
 		rel="stylesheet"
@@ -22,7 +37,7 @@
 <!-- <center><img src="http://www.popspotsnyc.com/pretzel_logic/Pretzel_logic.jpg" style="width:200px"/></center> -->
 </div>       
 <center><h1 style="font-family:Helvetica">Pretzel Logic</h1></center>
-<center><a href="https://www.steelydan.com/" target="_blank"><h2>Steely Dan</h2></a></center>
+<center><h2><a href="https://www.steelydan.com/" target="_blank" class="bandlink"> Steely Dan</a></h2></center>
 <center><h4>February 20, 1974</h4></center>
 </p>
 <hr/>
@@ -45,63 +60,64 @@
         <th>Track Title</th>
         <th>Track Length</th>
     </tr>
-    <center>
+ <!--center>-->
+ <tbody>
     <tr>
-    <td><center>1</center></td>
-    <td><center>Rikki Don't Lose That Number</center></td>
-    <td><center>4:32</center></td>
+    <td>1</td>
+    <td>Rikki Don't Lose That Number</td>
+    <td>4:32</td>
     </tr>
     <tr>
-        <td><center>2</center></td>
-        <td><center>Night by Night</center></td>
-        <td><center>3:40</center></td>
+        <td>2</td>
+        <td>Night by Night</td>
+        <td>3:40</td>
     </tr>
     <tr>
-        <td><center>3</center></td>
-        <td><center>Any Major Dude Will Tell You</center></td>
-        <td><center>3:05<center></td>
+        <td>3</td>
+        <td>Any Major Dude Will Tell You</td>
+        <td>3:05</td>
     </tr>
     <tr>
-        <td><center>4</center></td>
-        <td><center>Barrytown</center></td>
-        <td><center>3:17</center></td>
+        <td>4</td>
+        <td>Barrytown</td>
+        <td>3:17</td>
     </tr>
     <tr>
-        <td><center>5</center></td>
-        <td><center>East St Louis Toodle-Oo</center></td>
-        <td><center>2:45</center></td>
+        <td>5</td>
+        <td>East St Louis Toodle-Oo</td>
+        <td>2:45</td>
     </tr>
     <tr>
-        <td><center>6</center></td>
-        <td><center>Parker's Band</center></td>
-        <td><center>2:36</center></td>
+        <td>6</td>
+        <td>Parker's Band</td>
+        <td>2:36</td>
     </tr>
     <tr>
-        <td><center>7</center></td>
-        <td><center>Through with Buzz</center></td>
-        <td><center>1:30</center></td>
+        <td>7</td>
+        <td>Through with Buzz</td>
+        <td>1:30</td>
     </tr>
     <tr>
-        <td><center>8</center></td>
-        <td><center>Pretzel Logic</center></td>
-        <td><center>4:32</center></td>
+        <td>8</td>
+        <td>Pretzel Logic</td>
+        <td>4:32</td>
     </tr>
     <tr>
-        <td><center>9</center></td>
-        <td><center>With a Gun</center></td>
-        <td><center>2:15</center></td>
+        <td>9</td>
+        <td>With a Gun</td>
+        <td>2:15</td>
     </tr>
     <tr>
-        <td><center>10</center></td>
-        <td><center>Charlie Freak</center></td>
-        <td><center>2:41</center></td>
+        <td>10</td>
+        <td>Charlie Freak</td>
+        <td>2:41</td>
     </tr>
     <tr>
-        <td><center>11</center></td>
-        <td><center>Monkey in Your Soul</center></td>
-        <td><center>2:31</center></td>
+        <td>11</td>
+        <td>Monkey in Your Soul</td>   
+        <td>2:31</td>
     </tr>
-    
+    </tbody>
 </table>
 
     </body>
